[gd_scene load_steps=2 format=3 uid="uid://phx4ruxm1gx1"]

[ext_resource type="Script" path="res://Component/hurt_box_component.gd" id="1_1lgy6"]

[node name="HurtBoxComponent" type="Area2D"]
script = ExtResource("1_1lgy6")
invincible_time = 1.0

[node name="InvincibleTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
